fix: error pages local urls

--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -5,7 +5,7 @@
   <title>KenetG | Error 403</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Acceso denegado. Usa las rutas principales o vuelve al inicio de KenetG." />
-  <link rel="canonical" href="https://kenetg.com/errors/403.html" />
+  <link rel="canonical" href="/errors/403.html" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
