--- a/web/errors/404.html
+++ b/web/errors/404.html
@@ -5,7 +5,7 @@
   <title>KenetG | Error 404</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Página no encontrada. Vuelve al inicio o a las redes oficiales de KenetG." />
-  <link rel="canonical" href="https://kenetg.com/errors/404.html" />
+  <link rel="canonical" href="/errors/404.html" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
