--- a/web/errors/500.html
+++ b/web/errors/500.html
@@ -5,7 +5,7 @@
   <title>KenetG | Error 500</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Error interno. Vuelve al inicio o a las redes oficiales de KenetG mientras lo revisamos." />
-  <link rel="canonical" href="/errors/500.html" />
+  <link rel="canonical" href="https://kenetg.com/errors/500.html" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
