--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -5,7 +5,33 @@
   <title>KenetG | Error 403</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Acceso denegado. Usa las rutas principales o vuelve al inicio de KenetG." />
+  <meta name="robots" content="noindex,follow" />
   <link rel="canonical" href="https://kenetg.com/errors/403.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="KenetG" />
+  <meta property="og:locale" content="es_ES" />
+  <meta property="og:title" content="KenetG | Error 403" />
+  <meta property="og:description" content="Acceso denegado. Usa las rutas principales o vuelve al inicio de KenetG." />
+  <meta property="og:url" content="https://kenetg.com/errors/403.html" />
+  <meta property="og:image" content="https://kenetg.com/assets/img/kg-logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="KenetG | Error 403" />
+  <meta name="twitter:description" content="Acceso denegado. Usa las rutas principales o vuelve al inicio de KenetG." />
+  <meta name="twitter:image" content="https://kenetg.com/assets/img/kg-logo.png" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Error 403 | KenetG",
+    "description": "Acceso denegado. Usa las rutas principales o vuelve al inicio de KenetG.",
+    "url": "https://kenetg.com/errors/403.html",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "KenetG",
+      "url": "https://kenetg.com/"
+    }
+  }
+  </script>
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
@@ -42,7 +68,7 @@
             <a href="/tienda/" class="kg-nav-link kg-nav-link--pill">Tienda</a>
             <ul class="kg-submenu">
               <li>
-                <a href="/tienda/" class="kg-submenu-link">Ver catalogo</a>
+                <a href="/tienda/" class="kg-submenu-link">Ver cat&aacute;logo</a>
               </li>
               <li>
                 <span class="kg-submenu-link kg-submenu-link--disabled">
