--- a/web/tienda/index.html
+++ b/web/tienda/index.html
@@ -2,12 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>KenetG — Tienda</title>
+  <title>KenetG - Tienda</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#05010f" />
   <meta
     name="description"
     content="Tienda oficial de KenetG: catalogo demo de drops y productos de la comunidad."
   />
+  <meta name="keywords" content="KenetG, tienda, merch, drops, comunidad, camisetas" />
   <link rel="canonical" href="https://kenetg.com/tienda/" />
   <meta property="og:title" content="KenetG | Tienda" />
   <meta
@@ -17,6 +20,9 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kenetg.com/tienda/" />
   <meta property="og:image" content="https://kenetg.com/assets/img/kg-logo.png" />
+  <meta property="og:image:alt" content="Logo de KenetG con fondo neon" />
+  <meta property="og:site_name" content="KenetG" />
+  <meta property="og:locale" content="es_ES" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="KenetG | Tienda" />
   <meta
@@ -24,6 +30,9 @@
     content="Tienda oficial de KenetG: catalogo demo de drops y productos de la comunidad."
   />
   <meta name="twitter:image" content="https://kenetg.com/assets/img/kg-logo.png" />
+  <meta name="twitter:image:alt" content="Logo de KenetG con fondo neon" />
+  <link rel="alternate" hreflang="es" href="https://kenetg.com/tienda/" />
+  <link rel="alternate" hreflang="x-default" href="https://kenetg.com/tienda/" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
@@ -43,7 +52,7 @@
   </div>
 
   <!-- =======================================================
-       2) CONTENEDOR PRINCIPAL (encima del vídeo)
+       2) CONTENEDOR PRINCIPAL (encima del vÇðdeo)
        ======================================================= -->
   <div class="kg-page">
 
@@ -118,8 +127,8 @@
         <div class="kg-hero-content">
           <h1>Tienda oficial de <span>KenetG</span></h1>
           <p>
-            Página preliminar (demo). Aquí se mostrarán los drops y productos de la comunidad.
-            Por ahora, solo hay un artículo de prueba.
+            PÇ­gina preliminar (demo). AquÇð se mostrarÇ­n los drops y productos de la comunidad.
+            Por ahora, solo hay un artÇðculo de prueba.
           </p>
           <button class="kg-btn" onclick="scrollToStore()">
             Ver camiseta extensible V1
@@ -128,24 +137,24 @@
       </section>
 
       <!-- =====================================================
-           4.2) CATÁLOGO (DEMO)
+           4.2) CATÇ?LOGO (DEMO)
            ===================================================== -->
       <section id="tienda" class="kg-store">
         <header class="kg-store-header">
-          <h2>Catálogo</h2>
+          <h2>CatÇ­logo</h2>
           <p>
-            Primer artículo de prueba: <strong>Camiseta extensible V1</strong> (demo visual, sin compra real).
+            Primer artÇðculo de prueba: <strong>Camiseta extensible V1</strong> (demo visual, sin compra real).
           </p>
         </header>
 
           <div class="kg-products-grid kg-products-grid--catalog">
 
-            <!-- PRODUCTO 1 — REAL (DEMO) -->
-            <article class="kg-product-tall">
+            <!-- PRODUCTO 1 ƒ?" REAL (DEMO) -->
+            <article class="kg-product-tall" id="producto-1">
               <div class="kg-product-tall-badge">DEMO</div>
 
               <div class="kg-product-tall-media">
-                <!-- aquí irá la imagen del modelo en el futuro -->
+                <!-- aquÇð irÇ­ la imagen del modelo en el futuro -->
                 <span class="kg-product-tall-media-ph">Imagen modelo</span>
               </div>
 
@@ -153,31 +162,31 @@
                 <h3 class="kg-product-tall-title">Camiseta extensible V1</h3>
 
                 <p class="kg-product-tall-desc">
-                  Camiseta negra estilo KenetG con detalles neón en azul y rosa. Primera versión de prueba
-                  para validar estética y estructura de la tienda.
+                  Camiseta negra estilo KenetG con detalles neÇün en azul y rosa. Primera versiÇün de prueba
+                  para validar estÇ¸tica y estructura de la tienda.
                 </p>
 
                 <div class="kg-product-tall-meta">
-                  <span class="kg-product-tall-price">29,90 €</span>
-                  <span class="kg-product-tall-tagline">DEMO — SIN COMPRA REAL</span>
+                  <span class="kg-product-tall-price">29,90 ƒ'ª</span>
+                  <span class="kg-product-tall-tagline">DEMO ƒ?" SIN COMPRA REAL</span>
                 </div>
 
                 <div class="kg-product-tall-actions">
-                  <button class="kg-btn kg-btn--secondary" onclick="showDemoAlert()">Añadir al carrito (demo)</button>
+                  <button class="kg-btn kg-btn--secondary" onclick="showDemoAlert()">AÇñadir al carrito (demo)</button>
                   <button class="kg-btn-ghost" onclick="showDemoAlert()">Ver detalles</button>
                 </div>
               </div>
             </article>
 
-            <!-- PRODUCTOS PLACEHOLDER (VACÍOS) -->
+            <!-- PRODUCTOS PLACEHOLDER (VACÇ?OS) -->
             <article class="kg-product-tall kg-product-tall--empty">
               <div class="kg-product-tall-media">
                 <span class="kg-product-tall-media-ph">Imagen modelo</span>
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">Próximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparación.</p>
+                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -186,8 +195,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">Próximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparación.</p>
+                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -196,8 +205,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">Próximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparación.</p>
+                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -206,8 +215,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">Próximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparación.</p>
+                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -216,8 +225,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">Próximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparación.</p>
+                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
               </div>
             </article>
 
@@ -228,10 +237,13 @@
       <section class="kg-section">
         <div class="kg-section-inner">
           <div class="kg-geo-banner" id="kg-geo-banner">
-            <p>Quieres activar geolocalizacion para mejorar la experiencia? (opcional)</p>
-            <div class="kg-geo-banner-actions">
+            <p class="kg-geo-banner-status" data-geo-status>
+              Quieres activar geolocalizacion para ajustar horarios y contenidos cercanos? (opcional)
+            </p>
+            <div class="kg-geo-banner-actions" data-geo-actions>
               <button class="kg-btn" type="button" data-geo-allow>Permitir</button>
               <button class="kg-btn-ghost" type="button" data-geo-decline>Ahora no</button>
+              <button class="kg-btn-ghost" type="button" data-geo-reset hidden>Gestionar decision</button>
             </div>
           </div>
         </div>
@@ -255,5 +267,68 @@
        ======================================================= -->
   <script src="/assets/js/geo.js"></script>
   <script src="/assets/js/main.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "@id": "https://kenetg.com/#website",
+          "name": "KenetG",
+          "url": "https://kenetg.com/",
+          "inLanguage": "es"
+        },
+        {
+          "@type": "Organization",
+          "@id": "https://kenetg.com/#org",
+          "name": "KenetG Comunidad",
+          "url": "https://kenetg.com/",
+          "logo": "https://kenetg.com/assets/img/kg-logo.png"
+        },
+        {
+          "@type": "WebPage",
+          "@id": "https://kenetg.com/tienda/#webpage",
+          "url": "https://kenetg.com/tienda/",
+          "name": "KenetG | Tienda oficial",
+          "description": "Tienda oficial de KenetG: catalogo demo de drops y productos de la comunidad.",
+          "inLanguage": "es",
+          "isPartOf": { "@id": "https://kenetg.com/#website" },
+          "breadcrumb": { "@id": "https://kenetg.com/tienda/#breadcrumb" }
+        },
+        {
+          "@type": "BreadcrumbList",
+          "@id": "https://kenetg.com/tienda/#breadcrumb",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Inicio",
+              "item": "https://kenetg.com/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Tienda",
+              "item": "https://kenetg.com/tienda/"
+            }
+          ]
+        },
+        {
+          "@type": "ItemList",
+          "@id": "https://kenetg.com/tienda/#catalogo",
+          "name": "Catalogo demo KenetG",
+          "itemListElement": [
+            {
+              "@type": "Product",
+              "position": 1,
+              "name": "Camiseta extensible V1",
+              "description": "Camiseta negra estilo KenetG con detalles neon en azul y rosa. Demo visual sin compra real.",
+              "url": "https://kenetg.com/tienda/#producto-1"
+            }
+          ]
+        }
+      ]
+    }
+  </script>
 </body>
 </html>
