Refactor frontend scripts and add minified build

--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
   <meta name="twitter:image:alt" content="Logo de KenetG con fondo neon" />
   <link rel="alternate" hreflang="es" href="https://kenetg.com/" />
   <link rel="alternate" hreflang="x-default" href="https://kenetg.com/" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/styles.min.css" />
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -277,7 +277,7 @@
   <!-- =======================================================
        7) JS
        ======================================================= -->
-  <script src="/assets/js/geo.js"></script>
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/geo.min.js"></script>
+  <script src="/assets/js/main.min.js"></script>
 </body>
 </html>
