--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -32,7 +32,7 @@
     }
   }
   </script>
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/styles.min.css" />
 </head>
 
 <body>
@@ -116,7 +116,7 @@
     </footer>
   </div>
 
-  <script src="/assets/js/geo.js"></script>
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/geo.min.js"></script>
+  <script src="/assets/js/main.min.js"></script>
 </body>
 </html>
