--- a/web/errors/500.html
+++ b/web/errors/500.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Error interno. Vuelve al inicio o a las redes oficiales de KenetG mientras lo revisamos." />
   <link rel="canonical" href="https://kenetg.com/errors/500.html" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/styles.min.css" />
 </head>
 
 <body>
@@ -90,7 +90,7 @@
     </footer>
   </div>
 
-  <script src="/assets/js/geo.js"></script>
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/geo.min.js"></script>
+  <script src="/assets/js/main.min.js"></script>
 </body>
 </html>
