--- a/web/tienda/index.html
+++ b/web/tienda/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <!-- =======================================================
-       2) CONTENEDOR PRINCIPAL (encima del vÇðdeo)
+       2) CONTENEDOR PRINCIPAL (encima del video)
        ======================================================= -->
   <div class="kg-page">
 
@@ -127,8 +127,8 @@
         <div class="kg-hero-content">
           <h1>Tienda oficial de <span>KenetG</span></h1>
           <p>
-            PÇ­gina preliminar (demo). AquÇð se mostrarÇ­n los drops y productos de la comunidad.
-            Por ahora, solo hay un artÇðculo de prueba.
+            Pagina preliminar (demo). Aqui se mostraran los drops y productos de la comunidad.
+            Por ahora, solo hay un articulo de prueba.
           </p>
           <button class="kg-btn" type="button" data-action="scroll-to-store">
             Ver camiseta extensible V1
@@ -137,24 +137,24 @@
       </section>
 
       <!-- =====================================================
-           4.2) CATÇ?LOGO (DEMO)
+           4.2) CATALOGO (DEMO)
            ===================================================== -->
       <section id="tienda" class="kg-store">
         <header class="kg-store-header">
-          <h2>CatÇ­logo</h2>
+          <h2>Catalogo</h2>
           <p>
-            Primer artÇðculo de prueba: <strong>Camiseta extensible V1</strong> (demo visual, sin compra real).
+            Primer articulo de prueba: <strong>Camiseta extensible V1</strong> (demo visual, sin compra real).
           </p>
         </header>
 
           <div class="kg-products-grid kg-products-grid--catalog">
 
-            <!-- PRODUCTO 1 ƒ?" REAL (DEMO) -->
+            <!-- PRODUCTO 1 REAL (DEMO) -->
             <article class="kg-product-tall" id="producto-1">
               <div class="kg-product-tall-badge">DEMO</div>
 
               <div class="kg-product-tall-media">
-                <!-- aquÇð irÇ­ la imagen del modelo en el futuro -->
+                <!-- aqui ira la imagen del modelo en el futuro -->
                 <span class="kg-product-tall-media-ph">Imagen modelo</span>
               </div>
 
@@ -162,31 +162,31 @@
                 <h3 class="kg-product-tall-title">Camiseta extensible V1</h3>
 
                 <p class="kg-product-tall-desc">
-                  Camiseta negra estilo KenetG con detalles neÇün en azul y rosa. Primera versiÇün de prueba
-                  para validar estÇ¸tica y estructura de la tienda.
+                  Camiseta negra estilo KenetG con detalles neon en azul y rosa. Primera version de prueba
+                  para validar estetica y estructura de la tienda.
                 </p>
 
                 <div class="kg-product-tall-meta">
-                  <span class="kg-product-tall-price">29,90 ƒ'ª</span>
-                  <span class="kg-product-tall-tagline">DEMO ƒ?" SIN COMPRA REAL</span>
+                  <span class="kg-product-tall-price">29,90 EUR</span>
+                  <span class="kg-product-tall-tagline">DEMO - SIN COMPRA REAL</span>
                 </div>
 
                 <div class="kg-product-tall-actions">
-                  <button class="kg-btn kg-btn--secondary" type="button" data-action="demo-alert">AÇñadir al carrito (demo)</button>
+                  <button class="kg-btn kg-btn--secondary" type="button" data-action="demo-alert">Anadir al carrito (demo)</button>
                   <button class="kg-btn-ghost" type="button" data-action="demo-alert">Ver detalles</button>
                 </div>
               </div>
             </article>
 
-            <!-- PRODUCTOS PLACEHOLDER (VACÇ?OS) -->
+            <!-- PRODUCTOS PLACEHOLDER (VACIOS) -->
             <article class="kg-product-tall kg-product-tall--empty">
               <div class="kg-product-tall-media">
                 <span class="kg-product-tall-media-ph">Imagen modelo</span>
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
+                <h3 class="kg-product-tall-title">Proximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparacion.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -195,8 +195,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
+                <h3 class="kg-product-tall-title">Proximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparacion.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -205,8 +205,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
+                <h3 class="kg-product-tall-title">Proximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparacion.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -215,8 +215,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
+                <h3 class="kg-product-tall-title">Proximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparacion.</p>
               </div>
             </article>
             <article class="kg-product-tall kg-product-tall--empty">
@@ -225,8 +225,8 @@
               </div>
 
               <div class="kg-product-tall-content">
-                <h3 class="kg-product-tall-title">PrÇüximamente</h3>
-                <p class="kg-product-tall-desc">Nuevo drop en preparaciÇün.</p>
+                <h3 class="kg-product-tall-title">Proximamente</h3>
+                <p class="kg-product-tall-desc">Nuevo drop en preparacion.</p>
               </div>
             </article>
 
