--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -39,7 +39,7 @@
   <div class="kg-bg-video-wrap">
     <video
       class="kg-bg-video"
-      src="/assets/media/fondo-web.webm"
+      src="/assets/media/fondo-web-small.webm"
       autoplay
       muted
       loop
