--- a/web/index.html
+++ b/web/index.html
@@ -115,7 +115,7 @@
   <div class="kg-bg-video-wrap">
     <video
       class="kg-bg-video"
-      src="/assets/media/fondo-web-small.webm"
+      src="/assets/media/fondo-web.webm"
       autoplay
       muted
       loop
