--- a/web/redes/index.html
+++ b/web/redes/index.html
@@ -43,7 +43,7 @@
   <div class="kg-bg-video-wrap">
     <video
       class="kg-bg-video"
-      src="/assets/media/fondo-web-small.webm"
+      src="/assets/media/fondo-web.webm"
       autoplay
       muted
       loop
