Refactor JS to TypeScript and update video fade

--- a/web/errors/404.html
+++ b/web/errors/404.html
@@ -13,7 +13,7 @@
   <div class="kg-bg-video-wrap">
     <video
       class="kg-bg-video"
-      src="/assets/media/fondo-web.webm"
+      src="/assets/media/fondo-web.optimized.webm"
       autoplay
       muted
       loop
