Add SEO sitemap/robots and noindex errors

--- a/web/redes/index.html
+++ b/web/redes/index.html
@@ -10,7 +10,7 @@
     name="description"
     content="Hub oficial de enlaces verificados de KenetG con el directo de Twitch integrado y acceso rapido a redes y partners."
   />
-  <meta name="keywords" content="KenetG, redes, Twitch, directo, enlaces oficiales, comunidad" />
+  <meta name="keywords" content="KenetG, redes oficiales, Twitch en vivo, directo, enlaces verificados, comunidad, partners" />
   <link rel="canonical" href="https://kenetg.com/redes/" />
   <meta property="og:title" content="KenetG | Redes oficiales y directo" />
   <meta
