--- a/web/tienda/index.html
+++ b/web/tienda/index.html
@@ -10,7 +10,7 @@
     name="description"
     content="Tienda oficial de KenetG: catalogo demo de drops y productos de la comunidad."
   />
-  <meta name="keywords" content="KenetG, tienda, merch, drops, comunidad, camisetas" />
+  <meta name="keywords" content="KenetG, tienda, merch, drops, camisetas, comunidad, catalogo demo" />
   <link rel="canonical" href="https://kenetg.com/tienda/" />
   <meta property="og:title" content="KenetG | Tienda" />
   <meta
