--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Acceso denegado. Usa las rutas principales o vuelve al inicio de KenetG." />
   <meta name="robots" content="noindex,follow" />
+  <meta name="robots" content="noindex,follow" />
   <link rel="canonical" href="https://kenetg.com/errors/403.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="KenetG" />
