--- a/web/errors/500.html
+++ b/web/errors/500.html
@@ -5,6 +5,7 @@
   <title>KenetG | Error 500</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Error interno. Vuelve al inicio o a las redes oficiales de KenetG mientras lo revisamos." />
+  <meta name="robots" content="noindex,follow" />
   <link rel="canonical" href="https://kenetg.com/errors/500.html" />
   <link rel="stylesheet" href="/assets/css/styles.min.css" />
 </head>
