--- a/web/errors/404.html
+++ b/web/errors/404.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Página no encontrada. Vuelve al inicio o a las redes oficiales de KenetG." />
   <meta name="robots" content="noindex,follow" />
   <link rel="canonical" href="https://kenetg.com/errors/404.html" />
-  <link rel="stylesheet" href="/assets/css/styles.min.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
 <body>
@@ -91,7 +91,7 @@
     </footer>
   </div>
 
-  <script src="/assets/js/geo.min.js"></script>
-  <script src="/assets/js/main.min.js"></script>
+  <script src="/assets/js/geo.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
