--- a/web/redes/index.html
+++ b/web/redes/index.html
@@ -33,7 +33,7 @@
   <meta name="twitter:image:alt" content="Logo de KenetG con fondo neon" />
   <link rel="alternate" hreflang="es" href="https://kenetg.com/redes/" />
   <link rel="alternate" hreflang="x-default" href="https://kenetg.com/redes/" />
-  <link rel="stylesheet" href="/assets/css/styles.min.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
 <body>
@@ -278,8 +278,8 @@
   <!-- =======================================================
        6) JS
        ======================================================= -->
-  <script src="/assets/js/geo.min.js"></script>
-  <script src="/assets/js/main.min.js"></script>
+  <script src="/assets/js/geo.js"></script>
+  <script src="/assets/js/main.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
