Actualiza todo el proyecto

--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -65,6 +65,9 @@
           <li class="kg-nav-item">
             <a href="/redes/" class="kg-nav-link kg-nav-link--pill">Redes</a>
           </li>
+          <li class="kg-nav-item">
+            <a href="/contacto/" class="kg-nav-link kg-nav-link--pill">Contacto</a>
+          </li>
           <li class="kg-nav-item kg-nav-item--has-sub">
             <a href="/tienda/" class="kg-nav-link kg-nav-link--pill">Tienda</a>
             <ul class="kg-submenu">
