--- a/web/index.html
+++ b/web/index.html
@@ -11,14 +11,14 @@
   <meta name="theme-color" content="#05010f" />
   <meta
     name="description"
-    content="Landing oficial de KenetG: streamer, comunidad, directos en Twitch y accesos verificados a sus enlaces y drops."
+    content="Landing oficial de KenetG con bio de Twitch, informacion del directo y accesos a redes, tienda y contacto."
   />
-  <meta name="keywords" content="KenetG, streamer, Twitch, comunidad, enlaces oficiales, drops" />
+  <meta name="keywords" content="KenetG, Twitch, comunidad, bio, contacto, tienda" />
   <link rel="canonical" href="https://kenetg.com/" />
   <meta property="og:title" content="KenetG | Comunidad y directos oficiales" />
   <meta
     property="og:description"
-    content="Descubre quien es KenetG, como unirte a la comunidad, ver el directo y acceder a enlaces y tienda oficiales."
+    content="Bio de Twitch, datos del directo y accesos a redes, tienda y contacto oficiales."
   />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kenetg.com/" />
@@ -30,7 +30,7 @@
   <meta name="twitter:title" content="KenetG | Comunidad y directos oficiales" />
   <meta
     name="twitter:description"
-    content="Landing principal de KenetG: streamer, comunidad, directos en Twitch y enlaces verificados."
+    content="Landing oficial de KenetG con bio de Twitch, informacion del directo y accesos a redes, tienda y contacto."
   />
   <meta name="twitter:image" content="https://kenetg.com/assets/img/kg-logo.png" />
   <meta name="twitter:image:alt" content="Logo de KenetG con fondo neon" />
@@ -72,6 +72,7 @@
           "@id": "https://kenetg.com/#person",
           "name": "KenetG",
           "url": "https://kenetg.com/",
+          "description": "Un desconocido conocido mundialmente.",
           "sameAs": [
             "https://www.twitch.tv/kenetg",
             "https://www.youtube.com/@kenetgg",
@@ -85,7 +86,7 @@
           "@id": "https://kenetg.com/#webpage",
           "url": "https://kenetg.com/",
           "name": "KenetG - Streamer y comunidad",
-          "description": "Landing oficial de KenetG: streamer, comunidad, directos en Twitch y accesos verificados a sus enlaces y drops.",
+          "description": "Landing oficial de KenetG con bio de Twitch, informacion del directo y accesos a redes, tienda y contacto.",
           "inLanguage": "es",
           "isPartOf": { "@id": "https://kenetg.com/#website" },
           "breadcrumb": { "@id": "https://kenetg.com/#breadcrumb" }
@@ -153,6 +154,11 @@
             <a href="/redes/" class="kg-nav-link kg-nav-link--pill">Redes</a>
           </li>
 
+          <!-- CONTACTO -->
+          <li class="kg-nav-item">
+            <a href="/contacto/" class="kg-nav-link kg-nav-link--pill">Contacto</a>
+          </li>
+
           <!-- TIENDA -->
           <li class="kg-nav-item kg-nav-item--has-sub">
             <a href="/tienda/" class="kg-nav-link kg-nav-link--pill">Tienda</a>
@@ -198,52 +204,65 @@
           <p class="kg-home-hero-kicker">Sitio oficial de la comunidad</p>
           <h1>KenetG - Streamer & comunidad</h1>
           <p>
-            Directo en Twitch junto a la comunidad, con enlaces verificados y anuncios oficiales.
+            Bio oficial en Twitch: Un desconocido conocido mundialmente.
           </p>
           <p>
-            Accede al hub de redes, drops y tienda para apoyar y no perderte ninguna novedad.
+            Directos en Twitch con la comunidad, mas accesos a la web oficial y novedades.
           </p>
           <div class="kg-home-hero-actions">
-            <a class="kg-btn" href="/redes/">Ver enlaces oficiales</a>
-            <a class="kg-btn-ghost" href="/tienda/">Ir a la tienda</a>
+            <a class="kg-btn" href="/redes/">Ver redes oficiales</a>
+            <a class="kg-btn-ghost" href="/contacto/">Contacto oficial</a>
           </div>
         </div>
       </section>
 
-      <section class="kg-section kg-featured-links">
+      <section class="kg-section">
         <div class="kg-section-inner">
           <div class="kg-section-head">
-            <p class="kg-section-kicker">Enlaces</p>
-            <h2>Enlaces destacados</h2>
-            <p>Acceso rapido a las redes principales de KenetG.</p>
+            <p class="kg-section-kicker">Perfil verificado</p>
+            <h2>Datos oficiales de KenetG</h2>
+            <p>Informacion extraida de Twitch (puede variar con el tiempo).</p>
+          </div>
+          <div class="kg-faq-grid">
+            <article class="kg-faq-item">
+              <h3>Bio oficial</h3>
+              <p>Un desconocido conocido mundialmente.</p>
+            </article>
+
+            <article class="kg-faq-item">
+              <h3>Categoria actual</h3>
+              <p>Just Chatting (Twitch).</p>
+            </article>
+
+            <article class="kg-faq-item">
+              <h3>Equipo en Twitch</h3>
+              <p>Arek Force.</p>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="kg-section">
+        <div class="kg-section-inner">
+          <div class="kg-section-head">
+            <p class="kg-section-kicker">Navegacion</p>
+            <h2>Explora la web oficial</h2>
+            <p>Accesos directos a secciones clave sin repetir enlaces externos.</p>
           </div>
           <div class="kg-link-grid">
-            <a href="https://www.twitch.tv/kenetg"
-               class="kg-social-card kg-social-card--twitch"
-               target="_blank" rel="noopener noreferrer">
-              <span class="kg-social-label">Twitch</span>
-              <span class="kg-social-handle">kenetg</span>
+            <a href="/redes/" class="kg-social-card">
+              <span class="kg-social-label">Redes oficiales</span>
+              <span class="kg-social-handle">Enlaces verificados</span>
             </a>
 
-            <a href="https://youtube.com/@kenetgg?si=PNsefyIevtOP9D3k"
-               class="kg-social-card kg-social-card--yt"
-               target="_blank" rel="noopener noreferrer">
-              <span class="kg-social-label">YouTube</span>
-              <span class="kg-social-handle">@kenetgg</span>
+            <a href="/tienda/" class="kg-social-card">
+              <span class="kg-social-label">Tienda demo</span>
+              <span class="kg-social-handle">Drops y productos</span>
             </a>
 
-            <a href="https://www.instagram.com/kenetoficial"
-               class="kg-social-card kg-social-card--ig"
-               target="_blank" rel="noopener noreferrer">
-              <span class="kg-social-label">Instagram</span>
-              <span class="kg-social-handle">@kenetoficial</span>
-            </a>
-
-            <a href="https://www.tiktok.com/@kenetoficial"
-               class="kg-social-card kg-social-card--tt"
-               target="_blank" rel="noopener noreferrer">
-              <span class="kg-social-label">TikTok</span>
-              <span class="kg-social-handle">@kenetoficial</span>
+            <a href="/contacto/" class="kg-social-card">
+              <span class="kg-social-label">Contacto</span>
+              <span class="kg-social-handle">Marketing y colaboraciones</span>
             </a>
           </div>
         </div>
