--- a/web/redes/index.html
+++ b/web/redes/index.html
@@ -2,20 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>KenetG | Redes y directo</title>
+  <title>KenetG | Redes oficiales</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#05010f" />
   <meta
     name="description"
-    content="Hub oficial de enlaces verificados de KenetG con el directo de Twitch integrado y acceso rapido a redes y partners."
+    content="Hub oficial de enlaces verificados de KenetG con acceso rapido a redes y partners."
   />
-  <meta name="keywords" content="KenetG, redes oficiales, Twitch en vivo, directo, enlaces verificados, comunidad, partners" />
+  <meta name="keywords" content="KenetG, redes oficiales, enlaces verificados, comunidad, partners" />
   <link rel="canonical" href="https://kenetg.com/redes/" />
-  <meta property="og:title" content="KenetG | Redes oficiales y directo" />
+  <meta property="og:title" content="KenetG | Redes oficiales" />
   <meta
     property="og:description"
-    content="Acceso a las redes verificadas de KenetG, directo de Twitch y enlaces de colaboraciones en un solo lugar."
+    content="Acceso a las redes verificadas de KenetG y enlaces de colaboraciones en un solo lugar."
   />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kenetg.com/redes/" />
@@ -24,10 +24,10 @@
   <meta property="og:site_name" content="KenetG" />
   <meta property="og:locale" content="es_ES" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="KenetG | Redes oficiales y directo" />
+  <meta name="twitter:title" content="KenetG | Redes oficiales" />
   <meta
     name="twitter:description"
-    content="Hub de enlaces oficiales de KenetG con Twitch en vivo, redes verificadas y partners."
+    content="Hub de enlaces oficiales de KenetG con redes verificadas y partners."
   />
   <meta name="twitter:image" content="https://kenetg.com/assets/img/kg-logo.png" />
   <meta name="twitter:image:alt" content="Logo de KenetG con fondo neon" />
@@ -77,6 +77,10 @@
             <a href="/redes/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active">Redes</a>
           </li>
 
+          <li class="kg-nav-item">
+            <a href="/contacto/" class="kg-nav-link kg-nav-link--pill">Contacto</a>
+          </li>
+
           <li class="kg-nav-item kg-nav-item--has-sub">
             <a href="/tienda/" class="kg-nav-link kg-nav-link--pill">Tienda</a>
             <ul class="kg-submenu">
@@ -114,40 +118,7 @@
       <section class="kg-hero-redes">
         <div class="kg-hero-redes-inner">
           <h1>Enlaces oficiales de <span>KenetG</span></h1>
-          <p>Hub oficial con redes verificadas y directo integrado para evitar enlaces falsos.</p>
-        </div>
-      </section>
-
-      <section class="kg-stream">
-        <div class="kg-stream-inner">
-          <header class="kg-stream-header">
-            <h2>Directo de KenetG</h2>
-            <p>Si KenetG esta en directo, puedes verlo y chatear desde aqui mismo.</p>
-          </header>
-
-          <div class="kg-stream-layout">
-            <!-- PLAYER -->
-            <div class="kg-stream-player">
-              <!-- TODO: Cambiar parent=localhost a kenetg.com en produccion -->
-              <iframe
-                src="https://player.twitch.tv/?channel=kenetg&parent=localhost"
-                frameborder="0"
-                allowfullscreen
-                allow="fullscreen"
-                scrolling="no">
-              </iframe>
-            </div>
-
-            <!-- CHAT -->
-            <aside class="kg-stream-chat">
-              <!-- TODO: Cambiar parent=localhost a kenetg.com en produccion -->
-              <iframe
-                src="https://www.twitch.tv/embed/kenetg/chat?parent=localhost"
-                frameborder="0"
-                scrolling="no">
-              </iframe>
-            </aside>
-          </div>
+          <p>Hub oficial con redes verificadas para evitar enlaces falsos.</p>
         </div>
       </section>
 
@@ -315,8 +286,8 @@
           "@type": "WebPage",
           "@id": "https://kenetg.com/redes/#webpage",
           "url": "https://kenetg.com/redes/",
-          "name": "KenetG | Redes y directo",
-          "description": "Hub oficial de enlaces verificados de KenetG con el directo de Twitch integrado y acceso rapido a redes y partners.",
+          "name": "KenetG | Redes oficiales",
+          "description": "Hub oficial de enlaces verificados de KenetG con acceso rapido a redes y partners.",
           "inLanguage": "es",
           "isPartOf": { "@id": "https://kenetg.com/#website" },
           "breadcrumb": { "@id": "https://kenetg.com/redes/#breadcrumb" }
