--- a/web/tienda/index.html
+++ b/web/tienda/index.html
@@ -79,6 +79,10 @@
             <a href="/redes/" class="kg-nav-link kg-nav-link--pill">Redes</a>
           </li>
 
+          <li class="kg-nav-item">
+            <a href="/contacto/" class="kg-nav-link kg-nav-link--pill">Contacto</a>
+          </li>
+
           <!-- TIENDA (activa) -->
           <li class="kg-nav-item kg-nav-item--has-sub">
             <a href="/tienda/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active">
