--- a/web/errors/403.html
+++ b/web/errors/403.html
@@ -37,7 +37,8 @@
 </head>
 
 <body>
-  <div class="kg-bg-video-wrap">
+  <a class="kg-skip-link" href="#main-content">Saltar al contenido</a>
+  <div class="kg-bg-video-wrap" aria-hidden="true">
     <video
       class="kg-bg-video"
       src="/assets/media/fondo-web.optimized.webm"
@@ -52,12 +53,12 @@
     <header class="kg-header">
       <a class="kg-logo-wrap" href="/" aria-label="Ir a Inicio">
         <div class="kg-logo-orbit">
-          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" />
+          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" width="140" height="140" decoding="async" />
         </div>
         <span class="kg-brand">Kenet<span class="kg-brand-highlight">G</span></span>
       </a>
 
-      <nav class="kg-nav">
+      <nav class="kg-nav" aria-label="Navegacion principal">
         <ul class="kg-nav-list">
           <li class="kg-nav-item">
             <a href="/" class="kg-nav-link kg-nav-link--pill">Inicio</a>
@@ -97,7 +98,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="main-content" tabindex="-1">
       <section class="kg-error">
         <div class="kg-error-inner">
           <div class="kg-error-card">
