--- a/web/index.html
+++ b/web/index.html
@@ -109,11 +109,12 @@
 </head>
 
 <body>
+  <a class="kg-skip-link" href="#main-content">Saltar al contenido</a>
   <!-- =======================================================
        2) VIDEO DE FONDO (FIJO)
        - No intercepta clics (pointer-events: none)
        ======================================================= -->
-  <div class="kg-bg-video-wrap">
+  <div class="kg-bg-video-wrap" aria-hidden="true">
     <video
       class="kg-bg-video"
       src="/assets/media/fondo-web.optimized.webm"
@@ -136,17 +137,17 @@
       <!-- LOGO -->
       <a class="kg-logo-wrap" href="/" aria-label="Ir a Inicio">
         <div class="kg-logo-orbit">
-          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" />
+          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" width="140" height="140" decoding="async" />
         </div>
         <span class="kg-brand">Kenet<span class="kg-brand-highlight">G</span></span>
       </a>
 
       <!-- NAV -->
-      <nav class="kg-nav">
+      <nav class="kg-nav" aria-label="Navegacion principal">
         <ul class="kg-nav-list">
           <!-- INICIO -->
           <li class="kg-nav-item">
-            <a href="/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active">Inicio</a>
+            <a href="/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active" aria-current="page">Inicio</a>
           </li>
 
           <!-- REDES -->
@@ -198,7 +199,7 @@
     <!-- =======================================================
          5) MAIN
          ======================================================= -->
-    <main>
+    <main id="main-content" tabindex="-1">
       <section class="kg-home-hero">
         <div class="kg-home-hero-inner">
           <p class="kg-home-hero-kicker">Sitio oficial de la comunidad</p>
@@ -271,7 +272,7 @@
       <section class="kg-section">
         <div class="kg-section-inner">
           <div class="kg-geo-banner" id="kg-geo-banner">
-            <p class="kg-geo-banner-status" data-geo-status>
+            <p class="kg-geo-banner-status" data-geo-status aria-live="polite" aria-atomic="true">
               Quieres activar geolocalizacion para ajustar horarios y contenidos cercanos? (opcional)
             </p>
             <div class="kg-geo-banner-actions" data-geo-actions>
