--- a/web/redes/index.html
+++ b/web/redes/index.html
@@ -37,10 +37,11 @@
 </head>
 
 <body>
+  <a class="kg-skip-link" href="#main-content">Saltar al contenido</a>
   <!-- =======================================================
        1) VIDEO DE FONDO (IGUAL QUE INICIO)
        ======================================================= -->
-  <div class="kg-bg-video-wrap">
+  <div class="kg-bg-video-wrap" aria-hidden="true">
     <video
       class="kg-bg-video"
       src="/assets/media/fondo-web.optimized.webm"
@@ -62,19 +63,19 @@
     <header class="kg-header">
       <a class="kg-logo-wrap" href="/" aria-label="Ir a Inicio">
         <div class="kg-logo-orbit">
-          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" />
+          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" width="140" height="140" decoding="async" />
         </div>
         <span class="kg-brand">Kenet<span class="kg-brand-highlight">G</span></span>
       </a>
 
-      <nav class="kg-nav">
+      <nav class="kg-nav" aria-label="Navegacion principal">
         <ul class="kg-nav-list">
           <li class="kg-nav-item">
             <a href="/" class="kg-nav-link kg-nav-link--pill">Inicio</a>
           </li>
 
           <li class="kg-nav-item">
-            <a href="/redes/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active">Redes</a>
+            <a href="/redes/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active" aria-current="page">Redes</a>
           </li>
 
           <li class="kg-nav-item">
@@ -114,7 +115,7 @@
     <!-- =======================================================
          4) MAIN
          ======================================================= -->
-    <main>
+    <main id="main-content" tabindex="-1">
       <section class="kg-hero-redes">
         <div class="kg-hero-redes-inner">
           <h1>Enlaces oficiales de <span>KenetG</span></h1>
@@ -224,7 +225,7 @@
       <section class="kg-section">
         <div class="kg-section-inner">
           <div class="kg-geo-banner" id="kg-geo-banner">
-            <p class="kg-geo-banner-status" data-geo-status>
+            <p class="kg-geo-banner-status" data-geo-status aria-live="polite" aria-atomic="true">
               Quieres activar geolocalizacion para ajustar horarios y contenidos cercanos? (opcional)
             </p>
             <div class="kg-geo-banner-actions" data-geo-actions>
