--- a/web/tienda/index.html
+++ b/web/tienda/index.html
@@ -37,10 +37,11 @@
 </head>
 
 <body>
+  <a class="kg-skip-link" href="#main-content">Saltar al contenido</a>
   <!-- =======================================================
        1) VIDEO DE FONDO (IGUAL QUE INICIO)
        ======================================================= -->
-  <div class="kg-bg-video-wrap">
+  <div class="kg-bg-video-wrap" aria-hidden="true">
     <video
       class="kg-bg-video"
       src="/assets/media/fondo-web.optimized.webm"
@@ -62,12 +63,12 @@
     <header class="kg-header">
       <a class="kg-logo-wrap" href="/" aria-label="Ir a Inicio">
         <div class="kg-logo-orbit">
-          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" />
+          <img src="/assets/img/kg-logo.png" alt="Logo KenetG" class="kg-logo" width="140" height="140" decoding="async" />
         </div>
         <span class="kg-brand">Kenet<span class="kg-brand-highlight">G</span></span>
       </a>
       <!-- NAV (igual que inicio) -->
-      <nav class="kg-nav">
+      <nav class="kg-nav" aria-label="Navegacion principal">
         <ul class="kg-nav-list">
           <!-- INICIO -->
           <li class="kg-nav-item">
@@ -85,7 +86,7 @@
 
           <!-- TIENDA (activa) -->
           <li class="kg-nav-item kg-nav-item--has-sub">
-            <a href="/tienda/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active">
+            <a href="/tienda/" class="kg-nav-link kg-nav-link--pill kg-nav-link--active" aria-current="page">
               Tienda
             </a>
 
@@ -122,7 +123,7 @@
     <!-- =======================================================
          4) MAIN
          ======================================================= -->
-    <main>
+    <main id="main-content" tabindex="-1">
 
       <!-- =====================================================
            4.1) HERO TIENDA (PRELIMINAR)
@@ -241,7 +242,7 @@
       <section class="kg-section">
         <div class="kg-section-inner">
           <div class="kg-geo-banner" id="kg-geo-banner">
-            <p class="kg-geo-banner-status" data-geo-status>
+            <p class="kg-geo-banner-status" data-geo-status aria-live="polite" aria-atomic="true">
               Quieres activar geolocalizacion para ajustar horarios y contenidos cercanos? (opcional)
             </p>
             <div class="kg-geo-banner-actions" data-geo-actions>
